route for total, completed and pending counts added
